back/k8s-rest/a-rest-quiz.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: rest-quiz-deployment }
spec:
  replicas: 1
  selector: { matchLabels: { app: rest-quiz } }
  template:
    metadata: { labels: { app: rest-quiz } }
    spec:
      containers:
        - name: rest-quiz
          image: rest-quiz:v1            # build da tua app Spring
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8089 }]
          readinessProbe: { httpGet: { path: "/actuator/health", port: 8089 }, initialDelaySeconds: 5, periodSeconds: 5 }
          livenessProbe:  { httpGet: { path: "/actuator/health", port: 8089 }, initialDelaySeconds: 10, periodSeconds: 10 }
---
apiVersion: v1
kind: Service
metadata: { name: rest-quiz-service }
spec:
  selector: { app: rest-quiz }
  ports: [ { protocol: TCP, port: 8089, targetPort: 8089 } ]
  type: ClusterIP
