back/k8s-rest/b-rest-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: rest-user-deployment }
spec:
  replicas: 1
  selector: { matchLabels: { app: rest-user } }
  template:
    metadata: { labels: { app: rest-user } }
    spec:
      containers:
        - name: rest-user
          image: rest-user:v1            # pode ser a MESMA imagem do rest-quiz (Spring)
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8089 }]
          readinessProbe: { httpGet: { path: "/actuator/health/readiness", port: 8089 }, initialDelaySeconds: 5, periodSeconds: 5 }
          livenessProbe:  { httpGet: { path: "/actuator/health/liveness",  port: 8089 }, initialDelaySeconds: 10, periodSeconds: 10 }
---
apiVersion: v1
kind: Service
metadata: { name: rest-user-service }
spec:
  selector: { app: rest-user }
  ports: [ { protocol: TCP, port: 8089, targetPort: 8089 } ]
  type: ClusterIP
