back/k8s-rest/p-gateway-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: gateway-p-rest-deployment }
spec:
  replicas: 1
  selector: { matchLabels: { app: gateway-p-rest } }
  template:
    metadata: { labels: { app: gateway-p-rest } }
    spec:
      containers:
        - name: gateway-p-rest
          image: gateway-p-rest:v1
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8080 }]
          readinessProbe: { httpGet: { path: "/healthz", port: 8080 }, initialDelaySeconds: 3, periodSeconds: 5 }
          livenessProbe:  { httpGet: { path: "/healthz", port: 8080 }, initialDelaySeconds: 10, periodSeconds: 10 }
---
apiVersion: v1
kind: Service
metadata: { name: gateway-p-rest-service }
spec:
  selector: { app: gateway-p-rest }
  ports: [ { protocol: TCP, port: 80, targetPort: 8080 } ]
  type: NodePort
