back/k8s-rest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: gateway-p-rest-service, port: { number: 80 } }
